--- a/react-app/src/components/LandingPage.css
+++ b/react-app/src/components/LandingPage.css
@@ -1,11 +1,36 @@
 .Landing{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-    width: 100%;
     align-items: center;
     flex-direction: column;
+    gap: 2vh;
 }
 
-.logo {
-    height: 20em;
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.intro {
+    width: 30em;
+    text-align: left;
+}
+
+.iheart-logo {
+    width: 10em;
+    margin: 0 1em;
+}
+
+.react-logo {
+    width: 15em;
+}
+
+.aws-logo {
+    width: 8em;
+    margin-left: 2em
 }
